Set up tempory routing to test ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/index.css" type="text/css" />
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
@@ -23,9 +24,15 @@
 </head>
 
 <body>
-  <div class='background-image'>
-    <img class='bkg-img'
+  <div class='index-page'>
+    <img class='background-image'
       src="https://i.picsum.photos/id/1002/4312/2868.jpg?hmac=5LlLE-NY9oMnmIQp7ms6IfdvSUQOzP_O3DPMWmyNxwo">
+    <p class="about-page">Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I love.
+      Oat cake I love I love gummies candy canes liquorice ice cream.</p>
+    <div class="btn-login-register">
+      <button type="submit" class="btn-login">Login Here!</button>
+      <button type="submit" class="btn-register">Create Account</button>
+    </div>
   </div>
 
 </body>
