--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,8 +27,11 @@
   <div class='index-page'>
     <img class='background-image'
       src="https://i.picsum.photos/id/1002/4312/2868.jpg?hmac=5LlLE-NY9oMnmIQp7ms6IfdvSUQOzP_O3DPMWmyNxwo">
-    <p class="about-page">Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I love.
-      Oat cake I love I love gummies candy canes liquorice ice cream.</p>
+
+    <p class="about-page">Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I
+      love. Oat cake I love I love gummies candy canes liquorice ice cream. Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I
+      love. Oat cake I love I love gummies candy canes liquorice ice cream.Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I
+      love. Oat cake I love I love gummies candy canes liquorice ice cream.</p>
     <div class="btn-login-register">
       <button type="submit" class="btn-login">Login Here!</button>
       <button type="submit" class="btn-register">Create Account</button>
