practice git test2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
       <button type="submit" class="btn-register">Create Account</button>
     </div>
   </div>
-  <!-- <div></div> -->
+  <!-- <div>changes</div> -->
 
 </body>
 
