partially implemented GET /resources main page route, and updated main_resource.ejs file with ejs coding

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -28,7 +28,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
-            Logged in as name
+            Logged in as <%= user_email %>
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item" href="/resources/:username/:user_id">My Resources</a>
