for GET /resources route, implemented avg rating using a new function created called getAllResourcesAvgRating

--- a/views/main_resource-sk.ejs
+++ b/views/main_resource-sk.ejs
@@ -31,8 +31,8 @@
               <div>
                 <a class = "resourceTitleTag" href=<%= allResources[x].url %>> <%= allResources[x].title%></a>
               </div>
-                <span class="name"><%= allResources[x].username %><span>
-                <span class="rating">Avg Rating: ?</span>
+                <span class="name"><b>Creator: </b><%= allResources[x].username %><span>
+                <span class="rating"><b>  Avg Rating: </b><%= allResources[x].avg%></span>
             </div>
 
             <p class="resource-data"><%= allResources[x].description %></p>
