cleaned up folders by removing files

--- a/views/main_resource.ejs
+++ b/views/main_resource.ejs
@@ -1,12 +1,10 @@
-
-
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
 <!-- App CSS -->
-<link rel="stylesheet" href="styles/main_resource.css" type="text/css" />
+<!-- <link rel="stylesheet" href="styles/main_resource.css" type="text/css" /> -->
 
 
 <body>
@@ -25,20 +23,24 @@
         </div>
       </form>
       <div class="main-resource">
-        <article class="resource">
+
+        <% for(let x = 0; x < allResources.length ; x++){ %>
+          <article class="resource" style ="padding: 20px">
 
             <div class="info">
-              <span class="name">John Doe</span>
-              <span class="rating">Avg Rating: ?</span>
-          </div>
+              <div>
+                <a class = "resourceTitleTag" href=<%= allResources[x].url %>> <%= allResources[x].title%></a>
+              </div>
+                <span class="name"><b>Creator: </b><%= allResources[x].username %><span>
+                <span class="rating"><b>  Avg Rating: </b><%= allResources[x].avg%></span>
+            </div>
 
-          <p class="resource-data">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-          <footer class="footer">
-            <span class="date">Date: ##/##/##</span>
-            <span class ="like-icon">&#128153</span>
-          </footer>
-        </article>
+            <p class="resource-data"><%= allResources[x].description %></p>
+            <footer class="footer">
+              <span class="date"><b>Date Created:</b><%= allResources[x].created_at%></span>
+            </footer>
+          </article>
+        <% } %>
     </div>
 
     </div>
