--- a/views/new_resource.ejs
+++ b/views/new_resource.ejs
@@ -11,7 +11,7 @@
     </header>
     <div id="login">
       <style type="text/css">
-        body { background-color: ) !important; }
+        body { background-color:  !important; }
       </style>
 
         <div class="container">
