--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="/login" method="post">
+                        <form id="login-form" class="form" action="/resourcewall/login" method="post">
                             <h3 class="text-center text-success">Login here!</h3>
                             <div class="form-group">
                                 <label for="username" class="text-success">Email:</label><br>
