general test commit

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,15 +15,15 @@
             Categories
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="#">Sports</a>
+            <a class="dropdown-item" href="http://localhost:8080/categories/1/resources">Sports</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="3">Business</a>
+            <a class="dropdown-item" href="http://localhost:8080/categories/2/resources">Education</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="3">Education</a>
+            <a class="dropdown-item" href="http://localhost:8080/categories/3/resources">Business</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="3">Food</a>
+            <a class="dropdown-item" href="http://localhost:8080/categories/4/resources">Food</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="3">Business</a>
+            <a class="dropdown-item" href="http://localhost:8080/categories/5/resources">Travel</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -31,14 +31,14 @@
             Logged in as <%= user_email %>
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="/resources/:username/:user_id">My Resources</a>
+            <a class="dropdown-item" href="">My Resources</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/profile/:user_id">My Profile</a>
           </div>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+          <a class="nav-link" href="/resourcewall/logout">Logout</a>
         </li>
       </ul>
     </div>
