--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/addResource">Add Resource</a>
+          <a class="nav-link" href="resources/resources/new">Add Resource</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
@@ -23,7 +23,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="3">Food</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="3">Business</a>
+            <a class="dropdown-item" href="3">Travel</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -38,7 +38,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+          <a class="nav-link" href="/resourcewall/logout">Logout</a>
         </li>
       </ul>
     </div>
