--- a/views/specific_resource.ejs
+++ b/views/specific_resource.ejs
@@ -1,34 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
 
-<head>
-  <title>Specific Resource Page</title>
+<!-- App CSS -->
+<!-- <link rel="stylesheet" href="styles/main_resource.css" type="text/css" /> -->
 
-  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-  <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- External CSS -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
-</head>
 
 <body>
   <header>
     <%- include('partials/_header') %>
   </header>
+  <div id="login">
+    <h3 class="text-center text-danger pt-5">RESOURCE WALL</h3>
+    <form id="new-resource" action="/resources/search?=:query" method="POST">
+
+      <div class="search-area">
+        <div class="input-box">
+          <input class="textbox" type="text" name="text" id="resouce-text" placeholder="Search..."></input>
+          <button type="submit" class="btn btn-warning">Search</button>
+        </div>
+      </div>
+    </form>
+    <div class="main-resource">
+
+      <% for(let x = 0; x < allResources.length ; x++){ %>
+      <article class="resource" style="padding: 20px">
+
+        <div class="info">
+          <div>
+            <a class="resourceTitleTag" href=<%= allResources[x].url %>> <%= allResources[x].title%></a>
+          </div>
+          <span class="name"><b>Creator: </b><%= allResources[x].username %><span>
+              <span class="rating"><b> Avg Rating: </b><%= allResources[x].avg%></span>
+        </div>
+
+        <p class="resource-data"><%= allResources[x].description %></p>
+        <footer class="footer">
+          <span class="date"><b>Date Created:</b><%= allResources[x].created_at%></span>
+        </footer>
+      </article>
+      <% } %>
+    </div>
+
+  </div>
+
 
   <a href="/resources"></a>
   <div class="specific-resource" style="border-style: dotted">
@@ -63,6 +79,7 @@
       Posuere lorem ipsum dolor sit amet. Massa massa ultricies mi quis hendrerit dolor.</p>
   </div>
 
-</body>
 
-</html>
+
+
+</body>
