added href links

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -38,7 +38,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+          <a class="nav-link" href="/resourcewall/logout">Logout</a>
         </li>
       </ul>
     </div>
