added links for buttons; need editing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,8 @@
       love. Oat cake I love I love gummies candy canes liquorice ice cream.Candy tiramisu lollipop jelly dragée jujubes danish. Chocolate bar soufflé soufflé croissant I
       love. Oat cake I love I love gummies candy canes liquorice ice cream.</p>
     <div class="btn-login-register">
-      <button type="submit" class="btn-login">Login Here!</button>
-      <button type="submit" class="btn-register">Create Account</button>
+      <button type="submit" class="btn-login" action="/resourcewall/login">Login Here!</button>
+      <button type="submit" class="btn-register" action="/resourcewall/register">Create Account</button>
     </div>
   </div>
   <!-- <div>changes</div> -->
