file changes before merge

--- a/views/new_resource.ejs
+++ b/views/new_resource.ejs
@@ -1,8 +1,10 @@
-
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<head>
+	<title>Bootstrap 4 Drop Down Menu</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</head>
 <!------ Include the above in your HEAD tag ---------->
 
 <body>
@@ -11,41 +13,45 @@
     </header>
     <div id="login">
       <style type="text/css">
-        body { background-color:  !important; }
+
       </style>
 
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="register-form" class="form" action="/register" method="post" style="border: solid black 2px">
+                        <form id="register-form" class="form" action="/resources" method="post" style="border: solid black 2px">
                             <h3 class="text-center text-success">ADD RESOURCE BELOW>
-
                             <div class="form-group">
                               <label for="resourceTitle" class="text-success">Title:</label><br>
-                              <input type="text" name="resourceTitle" id="new-res-title" placeholder="Enter title..." class="form-control">
+                              <input type="text" name="title" id="new-res-title" placeholder="Enter title..." class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="newResourceURL" class="text-success">URL</label><br>
-                                <input type="text" name="newResourceURL" id="new-res-url" placeholder="Enter URL..." class="form-control">
-
+                                <input type="text" name="url" id="new-res-url" placeholder="Enter URL..." class="form-control">
                             </div>
                             <div class="form-group">
                               <label for="newResourceDescription" class="text-success">Description</label><br>
-                              <input type="text" name="newResourceDescription" id="new-res-description" placeholder="Enter description..." class="form-control">
+                              <input type="text" name="description" id="new-res-description" placeholder="Enter description..." class="form-control">
                             </div>
-
-
+                            <input type="radio" id="Sports" name="category_id" value="1">
+                            <label for="Sports">Sports</label><br>
+                            <input type="radio" id="Business" name="category_id" value="2">
+                            <label for="Business">Business</label><br>
+                            <input type="radio" id="Education" name="category_id" value="3">
+                            <label for="Education">Education</label>
+                            <input type="radio" id="Food" name="category_id" value="4">
+                            <label for="Food">Food</label><br>
+                            <input type="radio" id="Travel" name="category_id" value="5">
+                            <label for="Travel">Travel</label><br>
                             <div class="form-group">
                               <button type="submit" class="btn btn-success">ADD!</button>
                             </div>
                         </form>
-
-                        <a class = "redirectButton" href="/resources" style = "border: solid black 2px" >Go Back To Index Page?</a>
+                        <a class = "redirectButton" href="/resources" style = "border: solid black 2px" >Go back to Main page</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
-
