--- a/views/main_resource.ejs
+++ b/views/main_resource.ejs
@@ -17,20 +17,18 @@
     </header>
     <div id="login">
       <h3 class="text-center text-danger pt-5">RESOURCE WALL</h3>
-      <form id="new-resource" action="/resources/search?=:query" method="POST">
+      <form id="new-resource" action="/resources/search" method="POST">
 
         <div class="search-area">
           <div class="input-box">
-            <input class="textbox" type="text" name="text" id="resouce-text" placeholder="Search..." ></input>
+            <input class="textbox" type="text" name= "searchBar" id="resouce-text" placeholder="Search..." ></input>
             <button type="submit" class="btn btn-warning">Search</button>
           </div>
         </div>
       </form>
       <div class="main-resource">
-
         <% for(let x = 0; x < allResources.length ; x++){ %>
           <article class="resource" style ="padding: 20px">
-
             <div class="info">
               <div>
                 <a class = "resourceTitleTag" href=<%= allResources[x].url %>> <%= allResources[x].title%></a>
@@ -38,7 +36,6 @@
                 <span class="name"><b>Creator: </b><%= allResources[x].username %><span>
                 <span class="rating"><b>  Avg Rating: </b><%= allResources[x].avg%></span>
             </div>
-
             <p class="resource-data"><%= allResources[x].description %></p>
             <footer class="footer">
               <span class="date"><b>Date Created:</b><%= allResources[x].created_at%></span>
@@ -46,7 +43,6 @@
           </article>
         <% } %>
     </div>
-
     </div>
 </body>
 
