--- a/views/specific_resource.ejs
+++ b/views/specific_resource.ejs
@@ -1,68 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-  <title>Specific Resource Page</title>
-
-  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-  <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- External CSS -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-
-  <!-- Bootstrap -->
+  <title>Bootstrap 4 Drop Down Menu</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
 </head>
-
+<!------ Include the above in your HEAD tag ---------->
+<!-- App CSS -->
+<!-- <link rel="stylesheet" href="styles/main_resource.css" type="text/css" /> -->
 <body>
   <header>
     <%- include('partials/_header') %>
   </header>
-
-  <a href="/resources"></a>
-  <div class="specific-resource" style="border-style: dotted">
-    <h2 class="title-link">PLACEHODER FOR title/link</h2>
-    <div class="avg-rating">Rating: #</div>
-    <div class="specific-resource-desc">PLACEHOLDER FOR description PLACEHOLDER FOR description PLACEHOLDER FOR
-      description </div>
-    <div class="submit-rate">
-      <h5>Rate: </h5>
-      <input type="number" name="rate">
-      <button type="submit">Submit rate</button>
+  <div id="login">
+    <h3 class="text-center text-danger pt-5">RESOURCE WALL</h3>
+    <div class="main-resource">
+      <article class="resource" style="padding: 20px">
+        <div class="info">
+          <div>
+            <a class="resourceTitleTag" href=<%= resource_info.url %>> <%= resource_info.title%></a>
+          </div>
+          <span class="name"><b>Creator: </b><%= resource_info.username %><span>
+              <span class="rating"><b> Avg Rating: </b><%= resource_info.avg%></span>
+        </div>
+        <p class="resource-data"><%= resource_info.description %></p>
+        <footer class="footer">
+          <span class="date"><b>Date Created:</b><%= resource_info.created_at%></span>
+        </footer>
+      </article>
     </div>
-    <h5>Date posted: </h5>
-    <button>
-      <i class="fas fa-heart"></i>
-    </button>
+    <article class="comment" style="padding: 20px">
+      <div class="new-comment" style="border-style: dotted">
+        <form action="/resources" method="POST"></form>
+        <label>Add new comment:</label>
+        <input class="comment-box" type="text" name="newComment" placeholder="Enter comment...">
+        <button type="submit" class="btn-addComment">Submit</button>
+      </div>
+    </article>
+    <div class="old-comment" style="border-style: dotted">
+      <% for(let x = 0; x < comments_info.length ; x++){ %>
+      <article class="comment" style="padding: 20px">
+        <div class="info">
+          <span class="name"><%= comments_info[x].username %><span>
+              <span class="date"><b>Date Created:</b><%= comments_info[x].created_at%></span>
+              <p class="comment-data"><%= comments_info[x].comment %></p>
+        </div>
+      </article>
+      <% } %>
+    </div>
   </div>
-
-  <div class="new-comment" style="border-style: dotted">
-    <form action="/resources" method="POST">></form>
-    <label>Add new comment:</label>
-    <input class="comment-box" type="text" name="newComment" placeholder="Enter comment...">
-    <button type="submit" class="btn-addComment">Submit</button>
-  </div>
-
-  <!-- Add for loop to display old comments -->
-  <div class="old-comment" style="border-style: dotted">
-    <h4>PLACEHOLDER FOR User name</h4>
-    <h5>PLACEHOLDER FOR Created at: date</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua.
-      Posuere lorem ipsum dolor sit amet. Massa massa ultricies mi quis hendrerit dolor.</p>
-  </div>
-
 </body>
-
-</html>
