--- a/views/main_resource.ejs
+++ b/views/main_resource.ejs
@@ -1,10 +1,14 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<head>
+	<title>Bootstrap 4 Drop Down Menu</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</head>
 <!------ Include the above in your HEAD tag ---------->
 
 <!-- App CSS -->
-<!-- <link rel="stylesheet" href="styles/main_resource.css" type="text/css" /> -->
+<link rel="stylesheet" href="styles/main_resource.css" type="text/css" />
 
 
 <body>
@@ -24,15 +28,18 @@
       </form>
       <div class="main-resource">
 
-        <% for(let x = 0; x < allResources.length ; x++){ %>
+        <% for(let x = 0; x < allResources.length; x++){ %>
           <article class="resource" style ="padding: 20px">
 
             <div class="info">
-              <div>
+              <div class="title-resource">
                 <a class = "resourceTitleTag" href=<%= allResources[x].url %>> <%= allResources[x].title%></a>
+                <a class="btn btn-outline-success" href="/resources/<%= allResources[x].id %>">View Resource!</a>
               </div>
+              <div class="avg-rating">
                 <span class="name"><b>Creator: </b><%= allResources[x].username %><span>
                 <span class="rating"><b>  Avg Rating: </b><%= allResources[x].avg%></span>
+              </div>
             </div>
 
             <p class="resource-data"><%= allResources[x].description %></p>
