--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,10 @@
-
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<head>
+	<title>Bootstrap 4 Drop Down Menu</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</head>
 <!------ Include the above in your HEAD tag ---------->
 
 <body>
@@ -11,22 +13,21 @@
     </header>
     <div id="login">
       <style type="text/css">
-        body { background-color: ) !important; }
       </style>
         <h3 class="text-center text-success pt-5">RESOURCE WALL</h3>
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="register-form" class="form" action="/register" method="post" style="border: solid black 2px">
+                        <form id="register-form" class="form" action="/resourcewall/register" method="post" style="border: solid black 2px">
                             <h3 class="text-center text-success">Register here!</h3>
                             <div class="form-group">
                                 <label for="username" class="text-success">User-Name</label><br>
                                 <input type="text" name="username" id="user-name" placeholder="Enter a username..." class="form-control">
                             </div>
                             <div class="form-group">
-                              <label for="userEmail" class="text-success">Email:</label><br>
-                              <input type="email" name="userEmail" id="user-email" placeholder="Enter your email..." class="form-control">
+                              <label for="email" class="text-success">Email:</label><br>
+                              <input type="email" name="email" id="user-email" placeholder="Enter your email..." class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-success">Password:</label><br>
