--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -33,7 +33,7 @@
             Logged in as <%= user_email %>
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="">My Resources</a>
+            <a class="dropdown-item" href="/users/<%=userId%>/resources">My Resources</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/profile/user">My Profile</a>
           </div>
