implemented like button

--- a/views/specific_resource.ejs
+++ b/views/specific_resource.ejs
@@ -36,7 +36,7 @@
         <footer class="footer">
 
           <div class="enter-rating">
-            <form action="/resources/:resource_id/rate" method="POST"></form>
+            <!-- <form action="/<%= resource_id %>/rate" method="POST"></form> -->
             <label>Rating:</label>
             <input class="rating-box" type="text" name="rating" placeholder="">
             <button type="submit rating" class="btn-addRating">Submit</button>
@@ -45,12 +45,9 @@
           <span class="date"><b>Date Created:</b><%= resource_info.created_at%></span>
 
           <div class="is-like">
-            <form action="/resources/:resource_id/Like" method="POST"></form>
+            <!-- <form action="/<%= resource_id %>/Like" method="POST"></form> -->
             <!-- Has to change   i class="fas fa-thumbs-up"    to a button -->
-            <button type="submit" class="btn-like">Like<i class="fas fa-thumbs-up"></i></button>
-
-
-
+            <a href="/resources/<%=resource_id%>/like" class="btn-like"><%= likeOrNot %><i class="fas fa-thumbs-up"></i></a>
           </div>
 
         </footer>
